[tool.poetry]
name = "steinger-space-travel"
version = "0.1.0"
description = ""
authors = ["terry_u16 <terry-u16@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
