[package]
authors = []
edition = "2018"
name = "tools"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "0.4.3", features = ["derive"] }
rand = {version = "0.8.5", features = ["small_rng"]}
rand_chacha = "0.3.1"
svg = "0.10.0"
